clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr50865.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr50865.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s64i, "l1", align 8
        %2 = alloca s64i, "l2", align 8
        %3 = alloca s64i, "l3", align 8
        %4 = const 0 : s32i
        store %4, %0
        %5 = const 1 : s64i
        store %5, %1, align 8
        %6 = const -1 : s64i
        store %6, %2, align 8
        %7 = const -1 : s64i
        store %7, %3, align 8
        scope {
                %43 = const -9223372036854775807 : s64i
                %44 = const 1 : s64i
                sub
                %46 = const 1 : s64i
                rem
                %48 = const 0 : s64i
                cmp
                if %49 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %36 = const -9223372036854775807 : s64i
                %37 = const 1 : s64i
                sub
                %39 = load %1 : s64i, align 8
                rem
                %41 = const 0 : s64i
                cmp
                if %42 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        scope {
                %18 = load %2 : s64i, align 8
                %19 = const -1 : s64i
                cmp
                if %20 {
                        scope {
                                %29 = const -9223372036854775807 : s64i
                                %30 = const 1 : s64i
                                sub
                                %32 = const 1 : s64i
                                rem
                                %34 = const 0 : s64i
                                cmp
                                if %35 {
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                } else {
                        scope {
                                %21 = const -9223372036854775807 : s64i
                                %22 = const 1 : s64i
                                sub
                                %24 = load %2 : s64i, align 8
                                minus
                                rem
                                %27 = const 0 : s64i
                                cmp
                                if %28 {
                                        call @abort() [all]
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        scope {
                %10 = const -9223372036854775807 : s64i
                %11 = const 1 : s64i
                sub
                %13 = load %3 : s64i, align 8
                minus
                rem
                %16 = const 0 : s64i
                cmp
                if %17 {
                        call @abort() [all]
                        yield
                }
                yield
        }
        %8 = const 0 : s32i
        store %8, %0
        %9 = load %0 : s32i
        return %9
}
