clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr52129.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr52129.c" (c, x86_64-unknown-linux-gnu)
global __const.main.s : rec_S = {@t[1, 5], 27} [cir_private, default, dso_local, constant]
global t : rec_T = zero [external, default, align 1, dso_local]

fn abort() -> void [external, c, nothrow];
fn foo(%arg7: void*, %arg8: void*, %arg9: u32i, %arg10: void*, %arg11: void*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg7: void*, %arg8: void*, %arg9: u32i, %arg10: void*, %arg11: void*):
        %62 = alloca rec_anon_struct, "coerce", align 8
        %63 = alloca rec_anon_struct, "coerce", align 8
        %64 = get_member %63[0] "" : void**
        store %arg8, %64
        %65 = get_member %63[1] "" : u32i*
        store %arg9, %65
        %66 = load %63 : rec_anon_struct
        store %66, %62
        %67 = cast(bitcast) %62 : rec_S*
        %68 = load %67 : rec_S
        %69 = alloca void*, "x", align 8
        %70 = alloca rec_S, "s", align 8
        %71 = alloca void*, "y", align 8
        %72 = alloca void*, "z", align 8
        %73 = alloca s32i, "__retval", align 4
        store %arg7, %69
        store %68, %70
        store %arg10, %71
        store %arg11, %72
        scope {
            %76 = load %69 : void*, align 8
            %77 = const 2 : s64i
            %78 = get_global @t : rec_T*
            %79 = get_member %78[0] "a" : s8i[64]*
            %80 = get_element %79[%77] : s8i*
            %81 = cast(bitcast) %80 : void*
            %82 = cmp ne %76, %81 : bool
            %83 = ternary %82 ? { : bool
                %117 = const true : bool
                yield %117
            } : {
                %109 = get_member %70[0] "p" : void**
                %110 = load %109 : void*, align 8
                %111 = const 5 : s64i
                %112 = get_global @t : rec_T*
                %113 = get_member %112[1] "b" : s8i[64]*
                %114 = get_element %113[%111] : s8i*
                %115 = cast(bitcast) %114 : void*
                %116 = cmp ne %110, %115 : bool
                yield %116
            }
            %84 = ternary %83 ? { : bool
                %108 = const true : bool
                yield %108
            } : {
                %104 = get_member %70[1] "q" : u32i*
                %105 = load %104 : u32i, align 8
                %106 = const 27 : u32i
                %107 = cmp ne %105, %106 : bool
                yield %107
            }
            %85 = ternary %84 ? { : bool
                %103 = const true : bool
                yield %103
            } : {
                %96 = load %71 : void*, align 8
                %97 = const 17 : s64i
                %98 = get_global @t : rec_T*
                %99 = get_member %98[0] "a" : s8i[64]*
                %100 = get_element %99[%97] : s8i*
                %101 = cast(bitcast) %100 : void*
                %102 = cmp ne %96, %101 : bool
                yield %102
            }
            %86 = ternary %85 ? { : bool
                %95 = const true : bool
                yield %95
            } : {
                %88 = load %72 : void*, align 8
                %89 = const 17 : s64i
                %90 = get_global @t : rec_T*
                %91 = get_member %90[1] "b" : s8i[64]*
                %92 = get_element %91[%89] : s8i*
                %93 = cast(bitcast) %92 : void*
                %94 = cmp ne %88, %93 : bool
                yield %94
            }
            if %86 {
                %87 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %74 = const 29 : s32i
        store %74, %73
        %75 = load %73 : s32i
        return %75
}
fn bar(%arg0: void*, %arg1: void*, %arg2: void*, %arg3: void*, %arg4: u32i, %arg5: s32i, %arg6: rec_T*) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: void*, %arg1: void*, %arg2: void*, %arg3: void*, %arg4: u32i, %arg5: s32i, %arg6: rec_T*):
        %26 = alloca rec_anon_struct, "coerce", align 8
        %27 = alloca rec_anon_struct, "coerce", align 8
        %28 = get_member %27[0] "" : void**
        store %arg3, %28
        %29 = get_member %27[1] "" : u32i*
        store %arg4, %29
        %30 = load %27 : rec_anon_struct
        store %30, %26
        %31 = cast(bitcast) %26 : rec_S*
        %32 = load %31 : rec_S
        %33 = alloca rec_S, "coerce", align 8
        %34 = alloca void*, "x", align 8
        %35 = alloca void*, "y", align 8
        %36 = alloca void*, "z", align 8
        %37 = alloca rec_S, "s", align 8
        %38 = alloca s32i, "t", align 4
        %39 = alloca rec_T*, "u", align 8
        %40 = alloca s32i, "__retval", align 4
        store %arg0, %34
        store %arg1, %35
        store %arg2, %36
        store %32, %37
        store %arg5, %38
        store %arg6, %39
        %41 = load %34 : void*, align 8
        %42 = load %38 : s32i, align 4
        %43 = cast(integral) %42 : s64i
        %44 = load %39 : rec_T*, align 8
        %45 = get_member %44[0] "a" : s8i[64]*
        %46 = get_element %45[%43] : s8i*
        %47 = cast(bitcast) %46 : void*
        %48 = load %38 : s32i, align 4
        %49 = cast(integral) %48 : s64i
        %50 = load %39 : rec_T*, align 8
        %51 = get_member %50[1] "b" : s8i[64]*
        %52 = get_element %51[%49] : s8i*
        %53 = cast(bitcast) %52 : void*
        %54 = load %37 : rec_S, align 8
        store %54, %33
        %55 = cast(bitcast) %33 : rec_anon_struct*
        %56 = get_member %55[0] "" : void**
        %57 = load %56 : void*
        %58 = get_member %55[1] "" : u32i*
        %59 = load %58 : u32i
        %60 = call @foo(%41, %57, %59, %47, %53) : s32i [all]
        store %60, %40
        %61 = load %40 : s32i
        return %61
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_S, "coerce", align 8
    %1 = alloca s32i, "__retval", align 4
    %2 = alloca rec_S, "s", align 8
    %3 = const 0 : s32i
    store %3, %1
    %4 = get_global @__const.main.s : rec_S*
    copy %2, %4
    scope {
        %7 = const 2 : s64i
        %8 = get_global @t : rec_T*
        %9 = get_member %8[0] "a" : s8i[64]*
        %10 = get_element %9[%7] : s8i*
        %11 = cast(bitcast) %10 : void*
        %12 = const #cir.ptr<null> : void*
        %13 = const #cir.ptr<null> : void*
        %14 = const 17 : s32i
        %15 = get_global @t : rec_T*
        %16 = load %2 : rec_S, align 8
        store %16, %0
        %17 = cast(bitcast) %0 : rec_anon_struct*
        %18 = get_member %17[0] "" : void**
        %19 = load %18 : void*
        %20 = get_member %17[1] "" : u32i*
        %21 = load %20 : u32i
        %22 = call @bar(%11, %12, %13, %19, %21, %14, %15) : s32i [all]
        %23 = const 29 : s32i
        %24 = cmp ne %22, %23 : bool
        if %24 {
            %25 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %5 = const 0 : s32i
    store %5, %1
    %6 = load %1 : s32i
    return %6
}
