clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr52209.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr52209.c" (c, x86_64-unknown-linux-gnu)
global c : rec_S0 = Zero { ty: Named("rec_S0") } [external, default, align 4, dso_local]
global b : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const -1 : s32i
        %3 = get_global @c : rec_S0*
        get_member
        get_bitfield
        xor
        %7 = get_global @b : s32i*
        store %6, %7, align 4
        scope {
                %10 = get_global @b : s32i*
                %11 = load %10 : s32i, align 4
                %12 = const -1 : s32i
                cmp
                if %13 {
                        %14 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %8 = const 0 : s32i
        store %8, %0
        %9 = load %0 : s32i
        return %9
}
