clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr52760.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr52760.c" (c, x86_64-unknown-linux-gnu)
global __const.main.t : rec_T = {1, 515, 1029, 1543} [cir_private, default, dso_local, constant]

fn foo(%arg0: s32i, %arg1: rec_T*) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: rec_T*):
        %33 = alloca s32i, "x", align 4
        %34 = alloca rec_T*, "y", align 8
        %35 = alloca s32i, "i", align 4
        store %arg0, %33
        store %arg1, %34
        scope {
            %36 = const 0 : s32i
            store %36, %35, align 4
            for cond: {
                %155 = load %35 : s32i, align 4
                %156 = load %33 : s32i, align 4
                %157 = cmp lt %155, %156 : bool
                condition %157
            } step: {
                %37 = load %35 : s32i, align 4
                %38 = inc %37 : s32i [nsw]
                store %38, %35, align 4
                yield
            } do {
                scope {
                    %39 = const 255 : s32i
                    %40 = load %35 : s32i, align 4
                    %41 = cast(integral) %40 : s64i
                    %42 = load %34 : rec_T*, align 8
                    %43 = ptr_stride %42, %41 : rec_T*
                    %44 = get_member %43[0] "a" : u16i*
                    %45 = load %44 : u16i, align 2
                    %46 = cast(integral) %45 : s32i
                    %47 = const 8 : s32i
                    %48 = shift right %46, %47 : s32i
                    %49 = and %48, %39 : s32i
                    %50 = const 65280 : s32i
                    %51 = load %35 : s32i, align 4
                    %52 = cast(integral) %51 : s64i
                    %53 = load %34 : rec_T*, align 8
                    %54 = ptr_stride %53, %52 : rec_T*
                    %55 = get_member %54[0] "a" : u16i*
                    %56 = load %55 : u16i, align 2
                    %57 = cast(integral) %56 : s32i
                    %58 = const 8 : s32i
                    %59 = shift left %57, %58 : s32i
                    %60 = and %59, %50 : s32i
                    %61 = or %49, %60 : s32i
                    %62 = cast(integral) %61 : u16i
                    %63 = load %35 : s32i, align 4
                    %64 = cast(integral) %63 : s64i
                    %65 = load %34 : rec_T*, align 8
                    %66 = ptr_stride %65, %64 : rec_T*
                    %67 = get_member %66[0] "a" : u16i*
                    store %62, %67, align 2
                    %68 = const 255 : s32i
                    %69 = load %35 : s32i, align 4
                    %70 = cast(integral) %69 : s64i
                    %71 = load %34 : rec_T*, align 8
                    %72 = ptr_stride %71, %70 : rec_T*
                    %73 = get_member %72[1] "b" : u16i*
                    %74 = load %73 : u16i, align 2
                    %75 = cast(integral) %74 : s32i
                    %76 = const 8 : s32i
                    %77 = shift right %75, %76 : s32i
                    %78 = and %77, %68 : s32i
                    %79 = const 65280 : s32i
                    %80 = load %35 : s32i, align 4
                    %81 = cast(integral) %80 : s64i
                    %82 = load %34 : rec_T*, align 8
                    %83 = ptr_stride %82, %81 : rec_T*
                    %84 = get_member %83[1] "b" : u16i*
                    %85 = load %84 : u16i, align 2
                    %86 = cast(integral) %85 : s32i
                    %87 = const 8 : s32i
                    %88 = shift left %86, %87 : s32i
                    %89 = and %88, %79 : s32i
                    %90 = or %78, %89 : s32i
                    %91 = cast(integral) %90 : u16i
                    %92 = load %35 : s32i, align 4
                    %93 = cast(integral) %92 : s64i
                    %94 = load %34 : rec_T*, align 8
                    %95 = ptr_stride %94, %93 : rec_T*
                    %96 = get_member %95[1] "b" : u16i*
                    store %91, %96, align 2
                    %97 = const 255 : s32i
                    %98 = load %35 : s32i, align 4
                    %99 = cast(integral) %98 : s64i
                    %100 = load %34 : rec_T*, align 8
                    %101 = ptr_stride %100, %99 : rec_T*
                    %102 = get_member %101[2] "c" : u16i*
                    %103 = load %102 : u16i, align 2
                    %104 = cast(integral) %103 : s32i
                    %105 = const 8 : s32i
                    %106 = shift right %104, %105 : s32i
                    %107 = and %106, %97 : s32i
                    %108 = const 65280 : s32i
                    %109 = load %35 : s32i, align 4
                    %110 = cast(integral) %109 : s64i
                    %111 = load %34 : rec_T*, align 8
                    %112 = ptr_stride %111, %110 : rec_T*
                    %113 = get_member %112[2] "c" : u16i*
                    %114 = load %113 : u16i, align 2
                    %115 = cast(integral) %114 : s32i
                    %116 = const 8 : s32i
                    %117 = shift left %115, %116 : s32i
                    %118 = and %117, %108 : s32i
                    %119 = or %107, %118 : s32i
                    %120 = cast(integral) %119 : u16i
                    %121 = load %35 : s32i, align 4
                    %122 = cast(integral) %121 : s64i
                    %123 = load %34 : rec_T*, align 8
                    %124 = ptr_stride %123, %122 : rec_T*
                    %125 = get_member %124[2] "c" : u16i*
                    store %120, %125, align 2
                    %126 = const 255 : s32i
                    %127 = load %35 : s32i, align 4
                    %128 = cast(integral) %127 : s64i
                    %129 = load %34 : rec_T*, align 8
                    %130 = ptr_stride %129, %128 : rec_T*
                    %131 = get_member %130[3] "d" : u16i*
                    %132 = load %131 : u16i, align 2
                    %133 = cast(integral) %132 : s32i
                    %134 = const 8 : s32i
                    %135 = shift right %133, %134 : s32i
                    %136 = and %135, %126 : s32i
                    %137 = const 65280 : s32i
                    %138 = load %35 : s32i, align 4
                    %139 = cast(integral) %138 : s64i
                    %140 = load %34 : rec_T*, align 8
                    %141 = ptr_stride %140, %139 : rec_T*
                    %142 = get_member %141[3] "d" : u16i*
                    %143 = load %142 : u16i, align 2
                    %144 = cast(integral) %143 : s32i
                    %145 = const 8 : s32i
                    %146 = shift left %144, %145 : s32i
                    %147 = and %146, %137 : s32i
                    %148 = or %136, %147 : s32i
                    %149 = cast(integral) %148 : u16i
                    %150 = load %35 : s32i, align 4
                    %151 = cast(integral) %150 : s64i
                    %152 = load %34 : rec_T*, align 8
                    %153 = ptr_stride %152, %151 : rec_T*
                    %154 = get_member %153[3] "d" : u16i*
                    store %149, %154, align 2
                    yield
                }
                yield
            }
            yield
        }
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_T, "t", align 2
    %2 = const 0 : s32i
    store %2, %0
    %3 = get_global @__const.main.t : rec_T*
    copy %1, %3
    %4 = const 1 : s32i
    call @foo(%4, %1) [all]
    scope {
        %7 = get_member %1[0] "a" : u16i*
        %8 = load %7 : u16i, align 2
        %9 = cast(integral) %8 : s32i
        %10 = const 256 : s32i
        %11 = cmp ne %9, %10 : bool
        %12 = ternary %11 ? { : bool
            %32 = const true : bool
            yield %32
        } : {
            %27 = get_member %1[1] "b" : u16i*
            %28 = load %27 : u16i, align 2
            %29 = cast(integral) %28 : s32i
            %30 = const 770 : s32i
            %31 = cmp ne %29, %30 : bool
            yield %31
        }
        %13 = ternary %12 ? { : bool
            %26 = const true : bool
            yield %26
        } : {
            %21 = get_member %1[2] "c" : u16i*
            %22 = load %21 : u16i, align 2
            %23 = cast(integral) %22 : s32i
            %24 = const 1284 : s32i
            %25 = cmp ne %23, %24 : bool
            yield %25
        }
        %14 = ternary %13 ? { : bool
            %20 = const true : bool
            yield %20
        } : {
            %15 = get_member %1[3] "d" : u16i*
            %16 = load %15 : u16i, align 2
            %17 = cast(integral) %16 : s32i
            %18 = const 1798 : s32i
            %19 = cmp ne %17, %18 : bool
            yield %19
        }
        if %14 {
            call @abort() [all]
            yield
        }
        yield
    }
    %5 = const 0 : s32i
    store %5, %0
    %6 = load %0 : s32i
    return %6
}
