clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr52979_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr52979-1.c" (c, x86_64-unknown-linux-gnu)
global __const.bar.f : rec_S = zero [cir_private, default, dso_local, constant]
global a : rec_S = {[1, 0, 0, 0, 0]} [external, default, align 1, dso_local]
global b : rec_S = {[1, 0, 0, 0, 0]} [internal, default, align 1, dso_local]
global e : s32i = 0 [external, default, align 4, dso_local]
global d : s32i = 0 [external, default, align 4, dso_local]
global c : s32i = 0 [external, default, align 4, dso_local]

fn foo() -> void [external, c, no_inline, dso_local, nothrow] {
    return
}
fn bar() -> void [external, c, no_inline, dso_local, nothrow] {
    %11 = alloca rec_S, "f", align 1
    %12 = const 1 : s32i
    %13 = get_global @a : rec_S*
    %14 = get_member %13[0] "h" : u8i[5]*
    %15 = set_bitfield %14, %12, "h": 6 bits @31 in signed u8i[5] : s32i, align 1
    %16 = get_global @__const.bar.f : rec_S*
    copy %11, %16
    %17 = get_global @b : rec_S*
    copy %17, %11
    %18 = const 0 : s32i
    %19 = get_global @e : s32i*
    store %18, %19, align 4
    scope {
        %20 = get_global @d : s32i*
        %21 = load %20 : s32i, align 4
        %22 = cast(int_to_bool) %21 : bool
        if %22 {
            %23 = get_global @a : rec_S*
            %24 = get_member %23[0] "g" : u8i[5]*
            %25 = get_bitfield %24, "g": 31 bits @0 in signed u8i[5] : s32i, align 1
            %26 = get_global @c : s32i*
            store %25, %26, align 4
            yield
        }
        yield
    }
    return
}
fn baz() -> void [external, c, no_inline, dso_local, nothrow] {
    call @bar() [all]
    %9 = get_global @a : rec_S*
    %10 = get_global @b : rec_S*
    copy %9, %10
    return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    call @baz() [all]
    scope {
        %4 = get_global @a : rec_S*
        %5 = get_member %4[0] "g" : u8i[5]*
        %6 = get_bitfield %5, "g": 31 bits @0 in signed u8i[5] : s32i, align 1
        %7 = cast(int_to_bool) %6 : bool
        if %7 {
            %8 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = const 0 : s32i
    store %2, %0
    %3 = load %0 : s32i
    return %3
}
