clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__pr52979_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/pr52979-2.c" (c, x86_64-unknown-linux-gnu)
global __const.bar.f : rec_S = Zero { ty: Named("rec_S") } [cir_private, default, dso_local, constant]
global a : rec_S = ConstRecord { ty: Named("rec_S"), members: Array([ConstArray { ty: Array { element_type: Named("u8i"), size: 5 }, elts: Array([CirInt { ty: Named("u8i"), value: "1" }, CirInt { ty: Named("u8i"), value: "0" }, CirInt { ty: Named("u8i"), value: "0" }, CirInt { ty: Named("u8i"), value: "0" }, CirInt { ty: Named("u8i"), value: "0" }]), trailing_zeros_num: 0 }]) } [external, default, align 1, dso_local]
global b : rec_S = ConstRecord { ty: Named("rec_S"), members: Array([ConstArray { ty: Array { element_type: Named("u8i"), size: 5 }, elts: Array([CirInt { ty: Named("u8i"), value: "1" }, CirInt { ty: Named("u8i"), value: "0" }, CirInt { ty: Named("u8i"), value: "0" }, CirInt { ty: Named("u8i"), value: "0" }, CirInt { ty: Named("u8i"), value: "0" }]), trailing_zeros_num: 0 }]) } [internal, default, align 1, dso_local]
global e : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global d : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]
global c : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn foo() -> void [external, c, no_inline, dso_local, nothrow] {
        return
}
fn bar() -> void [external, c, no_inline, dso_local, nothrow] {
        %11 = alloca rec_S, "f", align 1
        %12 = const 1 : s32i
        %13 = get_global @a : rec_S*
        get_member
        set_bitfield
        %16 = get_global @__const.bar.f : rec_S*
        copy
        %17 = get_global @b : rec_S*
        copy
        %18 = const 0 : s32i
        %19 = get_global @e : s32i*
        store %18, %19, align 4
        scope {
                %20 = get_global @d : s32i*
                %21 = load %20 : s32i, align 4
                %22 = cast(int_to_bool) %21 : bool
                if %22 {
                        %23 = get_global @a : rec_S*
                        get_member
                        get_bitfield
                        %26 = get_global @c : s32i*
                        store %25, %26, align 4
                        yield
                }
                yield
        }
        return
}
fn baz() -> void [external, c, no_inline, dso_local, nothrow] {
        call @bar() [all]
        %9 = get_global @a : rec_S*
        %10 = get_global @b : rec_S*
        copy
        return
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        call @baz() [all]
        scope {
                %4 = get_global @a : rec_S*
                get_member
                get_bitfield
                %7 = cast(int_to_bool) %6 : bool
                if %7 {
                        %8 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
